Add support for efusmx8mp
Add support for efusmx8mp
- generic device tree include file armstonemx8mp.dtsi and
  board device tree armstonemx8mp.dts
- entry in Makefile for building process
- enable local version configuration because otherwise problems
  with loading sdma firmware are possible.

--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -63,3 +63,4 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mpr2.dtb \
 			  picocoremx8mpr2-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
 			  picocoremx8mpr2-lcdif-g133han01.dtb \
 			  picocoremx8mpr2-adp-aud1.dtb
+dtb-$(CONFIG_ARCH_MXC) += efusmx8mp.dtb
