Fix armstonemx8mp recording issue
The wm8960 is not able to record, because in codec-slave mode we need to
set the ADCLRC pin to GPIO1 to be able to use DACLRC as clock for both
input and output.

We are currently not able to use the simple-audio-card driver in
codec-master mode and for the next kernel version, we are going to
switch to the fsl-asoc-card driver.

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
@@ -561,6 +561,7 @@
 		clocks = <&audiomix_clk IMX8MP_CLK_AUDIOMIX_SAI2_MCLK1>;
 		clock-names = "mclk";
 		wlf,shared-lrclk;
+		wlf,gpio-cfg = <1 0>;
 		SPKVDD1-supply = <&reg_vref_3v3>;
 	};
 #endif
