fsimx8mp: Enable drivers for efusmx8mp in fsxim8mp_defconfig
fsimx8mp: Enable drivers for efusmx8mp in fsxim8mp_defconfig
- touchscreen driver sx8654
- lountium lt9211 for rgb interface
- spi-nand driver support

--- a/arch/arm64/configs/fsimx8mp_defconfig
+++ b/arch/arm64/configs/fsimx8mp_defconfig
@@ -217,6 +217,7 @@ CONFIG_MTD_SST25L=y
 CONFIG_MTD_RAW_NAND=y
 CONFIG_MTD_NAND_DENALI_DT=y
 CONFIG_MTD_NAND_GPMI_NAND=y
+CONFIG_MTD_SPI_NAND=y
 CONFIG_MTD_NAND_FSL_IFC=y
 CONFIG_MTD_SPI_NOR=y
 # CONFIG_MTD_SPI_NOR_USE_4K_SECTORS is not set
@@ -346,6 +347,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 CONFIG_TOUCHSCREEN_GOODIX=y
 CONFIG_TOUCHSCREEN_FT5X06=y
+CONFIG_TOUCHSCREEN_SX8654=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=m
 CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
@@ -531,6 +533,7 @@ CONFIG_DRM_FSL_IMX_LVDS_BRIDGE=y
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_TOSHIBA_FUS_TC358775=y
+CONFIG_DRM_LONTIUM_LT9211=y
 CONFIG_DRM_SII902X=m
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_NWL_MIPI_DSI=y
