--- a/arch/arm64/boot/dts/F+S/displays/imx8ulp-lcd-ee0350et-2cp-v1.2.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8ulp-lcd-ee0350et-2cp-v1.2.dtsi
@@ -7,6 +7,9 @@
 	pwm_backlight: backlight {
 		compatible = "pwm-backlight";
 		pwms = <&tpm_rpchip_0 2 50000 0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_bl>;
+		enable-gpios = <&gpioe 8 GPIO_ACTIVE_LOW>;
 		brightness-levels = < 0  1  2  3  4  5  6  7  8  9
 				     10 11 12 13 14 15 16 17 18 19
 				     20 21 22 23 24 25 26 27 28 29
@@ -19,22 +22,25 @@
 				     90 91 92 93 94 95 96 97 98 99
 				    100>;
 		default-brightness-level = <100>;
+		fb-names = "mipi_dsi";
 	};
 };
 
 // /delete-node/ &ite_bridge;
 
 &dsi {
+	status = "okay";
+
 	panel@0 {
         compatible = "eagleeyetech,ee0350et-2";
         reg = <0>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_dsi>;
-		himax,dsi-lanes = <2>;
-		reset-gpios = <&gpiof 8 GPIO_ACTIVE_LOW>;
-		vcc-supply = <&reg_5v>;
-		iovcc-supply = <&reg_5v>;
+		// himax,dsi-lanes = <2>;
+		reset-gpios = <&gpioe 9 GPIO_ACTIVE_LOW>;
 		backlight = <&pwm_backlight>;
+
+
 
 		port {
 			panel_in: endpoint {
@@ -54,15 +60,56 @@
 	};
 };
 
-// &i2c_rpbus_1 {
-// 	goodix@14 {
-// 		compatible = "goodix,gt911";
-// 		reg = <0x14>;
-// 		interrupt-parent = <&rpmsg_gpiob>;
-// 		interrupts = <5 IRQ_TYPE_EDGE_FALLING>;
-// 		irq-gpios = <&rpmsg_gpiob 5 GPIO_ACTIVE_HIGH>;
-// 		reset-gpios = <&pca6416_1 5 GPIO_ACTIVE_HIGH>;
-// 		touchscreen-size-x = <720>;
-// 		touchscreen-size-y = <1280>;
-// 	};
-// };
+&lpi2c4 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	clock-frequency = <100000>;
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&pinctrl_lpi2c4>;
+	pinctrl-1 = <&pinctrl_lpi2c4>;
+	status = "okay";
+
+	/* Atmel PCAP touch on Touch Connector (I2C) */
+	mxt336u@4a {
+		compatible = "atmel,maxtouch";
+		reg = <0x4a>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_touch>;
+		pinctrl-1 = <&pinctrl_touch>;
+		interrupt-parent = <&gpioe>;
+		interrupts = <2 IRQ_TYPE_EDGE_FALLING>;
+		atmel,cfg_name = "atmel/mxt336u-gloves.cfg";
+		reset-gpios = <&gpioe 3 GPIO_ACTIVE_LOW>;
+	};
+};
+
+
+
+&iomuxc1 {
+	pinctrl_dsi: dsigrp {
+		fsl,pins = <
+			MX8ULP_PAD_PTE9__PTE9		0x3
+		>;
+	};
+
+	pinctrl_bl: blgrp {
+		fsl,pins = <
+			MX8ULP_PAD_PTE8__PTE8		0x3
+		>;
+	};
+
+	pinctrl_lpi2c4: lpi2c4grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTE0__LPI2C4_SCL 0x20
+			MX8ULP_PAD_PTE1__LPI2C4_SDA 0x20
+		>;
+	};
+
+	pinctrl_touch: touchgrp {
+		fsl,pins = <
+		MX8ULP_PAD_PTE2__PTE2	0x3 //int
+		MX8ULP_PAD_PTE3__PTE3	0x3 //reset
+		>;
+	};
+
+};
