--- a/arch/arm64/boot/dts/F+S/fsimx8ulp.dts
+++ b/arch/arm64/boot/dts/F+S/fsimx8ulp.dts
@@ -17,37 +17,9 @@
 		stdout-path = &lpuart5;
 	};
 
-	// gpio-keys {
-	// 	compatible = "gpio-keys";
-	// 	pinctrl-names = "default";
-	// 	pinctrl-0 = <&pinctrl_gpio_keys>;
-
-	// 	power-on {
-	// 		label = "PowerOn";
-	// 		gpios = <&gpiof 31 GPIO_ACTIVE_LOW>;
-	// 		linux,code = <KEY_POWER>;
-	// 	};
-	// };
-
 	memory@40000000 {
 		device_type = "memory";
 		reg = <0x0 0x80000000 0 0x80000000>;
-	};
-
-	rpmsg_keys: rpmsg-keys {
-		compatible = "fsl,rpmsg-keys";
-
-		volume-up {
-			label = "VolumeUp";
-			linux,code = <KEY_VOLUMEUP>;
-			rpmsg-key,wakeup;
-		};
-
-		volume-down {
-			label = "VolumeDown";
-			linux,code = <KEY_VOLUMEDOWN>;
-			rpmsg-key,wakeup;
-		};
 	};
 
 	reserved-memory {
@@ -146,10 +118,6 @@
 };
 
 &dphy {
-	status = "okay";
-};
-
-&dsi {
 	status = "okay";
 };
 
@@ -256,113 +224,51 @@
 	status = "okay";
 };
 
+&lpi2c7 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	clock-frequency = <10000>;
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&pinctrl_lpi2c7>;
+	pinctrl-1 = <&pinctrl_lpi2c7>;
+	status = "okay";
+};
+
 &iomuxc1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hoggrp>;
 
 	pinctrl_hoggrp: hoggrp {
 		fsl,pins = <
-		MX8ULP_PAD_PTF0__PTF0		0x3
-		MX8ULP_PAD_PTF1__PTF1		0x3
-		MX8ULP_PAD_PTF2__PTF2		0x3
-		MX8ULP_PAD_PTF3__PTF3		0x3
-		MX8ULP_PAD_PTF4__PTF4		0x3
-		MX8ULP_PAD_PTF5__PTF5		0x3
-		MX8ULP_PAD_PTF6__PTF6		0x3
-		MX8ULP_PAD_PTF7__PTF7		0x3
-		MX8ULP_PAD_PTF10__PTF10		0x3
-		MX8ULP_PAD_PTF11__PTF11		0x3
-		MX8ULP_PAD_PTF12__PTF12		0x3
-		MX8ULP_PAD_PTF13__PTF13		0x3
-		MX8ULP_PAD_PTF16__PTF16		0x3
-		MX8ULP_PAD_PTF17__PTF17		0x3
-		MX8ULP_PAD_PTF18__PTF18		0x3
-		MX8ULP_PAD_PTF19__PTF19		0x3
-		MX8ULP_PAD_PTF20__PTF20		0x3
-		MX8ULP_PAD_PTF21__PTF21		0x3
-		MX8ULP_PAD_PTF22__PTF22		0x3
-		MX8ULP_PAD_PTF23__PTF23		0x3
-		MX8ULP_PAD_PTF24__PTF24		0x3
-		MX8ULP_PAD_PTF25__PTF25		0x3
-		MX8ULP_PAD_PTF26__PTF26		0x3
-		MX8ULP_PAD_PTF27__PTF27		0x3
-		MX8ULP_PAD_PTF28__PTF28		0x3
-		MX8ULP_PAD_PTF29__PTF29		0x3
-		MX8ULP_PAD_PTF30__PTF30		0x3
-		MX8ULP_PAD_PTF31__PTF31		0x3
-
-		// MX8ULP_PAD_PTE0__PTE0		0x3
-		// MX8ULP_PAD_PTE1__PTE1		0x3
-		// MX8ULP_PAD_PTE2__PTE2		0x3
-		// MX8ULP_PAD_PTE3__PTE3		0x3
-		// MX8ULP_PAD_PTE4__PTE4		0x3
-		// MX8ULP_PAD_PTE5__PTE5		0x3
-		MX8ULP_PAD_PTE6__PTE6		0x3
-		// MX8ULP_PAD_PTE7__PTE7		0x3
-		MX8ULP_PAD_PTE8__PTE8		0x3
-		MX8ULP_PAD_PTE9__PTE9		0x3
-		MX8ULP_PAD_PTE10__PTE10		0x3
-		MX8ULP_PAD_PTE11__PTE11		0x3
-		// MX8ULP_PAD_PTE12__PTE12		0x3
-		// MX8ULP_PAD_PTE13__PTE13		0x3
-		MX8ULP_PAD_PTE14__PTE14		0x3
-		MX8ULP_PAD_PTE15__PTE15		0x3
-		// MX8ULP_PAD_PTE16__PTE16		0x3
-		MX8ULP_PAD_PTE17__PTE17		0x3
-		// MX8ULP_PAD_PTE18__PTE18		0x3
-		MX8ULP_PAD_PTE19__PTE19		0x3
-		MX8ULP_PAD_PTE20__PTE20		0x3
-		MX8ULP_PAD_PTE21__PTE21		0x3
-		MX8ULP_PAD_PTE22__PTE22		0x3
-		MX8ULP_PAD_PTE23__PTE23		0x3
-
-		MX8ULP_PAD_PTD12__PTD12		0x3
-		MX8ULP_PAD_PTD13__PTD13		0x3
-		MX8ULP_PAD_PTD14__PTD14		0x3
-		MX8ULP_PAD_PTD15__PTD15		0x3
-		MX8ULP_PAD_PTD16__PTD16		0x3
-		MX8ULP_PAD_PTD17__PTD17		0x3
-		MX8ULP_PAD_PTD18__PTD18		0x3
-		MX8ULP_PAD_PTD19__PTD19		0x3
-		// MX8ULP_PAD_PTD20__PTD20		0x3
-		// MX8ULP_PAD_PTD21__PTD21		0x3
-		MX8ULP_PAD_PTD22__PTD22		0x3
-		MX8ULP_PAD_PTD23__PTD23		0x3
-		>;
-	};
-
-	pinctrl_dsi: dsigrp {
-		fsl,pins = <
-			MX8ULP_PAD_PTF8__PTF8		0x3
-			MX8ULP_PAD_PTF9__PTF9		0x3
+			MX8ULP_PAD_PTE23__PTE23	0x3
 		>;
 	};
 
 	pinctrl_lpuart5: lpuart5grp {
 		fsl,pins = <
-			MX8ULP_PAD_PTF14__LPUART5_TX	0x3
-			MX8ULP_PAD_PTF15__LPUART5_RX	0x3
+			MX8ULP_PAD_PTE6__LPUART5_TX	0x3
+			MX8ULP_PAD_PTE7__LPUART5_RX	0x3
 		>;
 	};
 
-	pinctrl_lpi2c7: lpi2c7grp {
+	 pinctrl_lpi2c7: lpi2c7grp {
 		fsl,pins = <
-			MX8ULP_PAD_PTE12__LPI2C7_SCL	0x20
-			MX8ULP_PAD_PTE13__LPI2C7_SDA	0x20
+			MX8ULP_PAD_PTF4__LPI2C7_SCL 0x20
+			MX8ULP_PAD_PTF5__LPI2C7_SDA 0x20
 		>;
 	};
 
 	pinctrl_otgid1: usb1grp {
 		fsl,pins = <
-			MX8ULP_PAD_PTE16__USB0_ID	0x10003
-			MX8ULP_PAD_PTE18__USB0_OC	0x10003
+			MX8ULP_PAD_PTD12__USB0_ID	0x10003
+			MX8ULP_PAD_PTD14__USB0_OC	0x10003
 		>;
 	};
 
 	pinctrl_otgid2: usb2grp {
 		fsl,pins = <
-			MX8ULP_PAD_PTE21__USB1_ID	0x10003
-			MX8ULP_PAD_PTE20__USB1_OC	0x10003
+			MX8ULP_PAD_PTD23__USB1_ID	0x10003
+			MX8ULP_PAD_PTD22__USB1_OC	0x10003
 		>;
 	};
 
