fsimx8mp: Improve pwm backlight brihtness for j070wvtc0211 display
Display j070wvtc0211 needs other backlight brightness values
compared to default. Improve the brightness-level
in armstonemx8mp.dts and efusmx8mp.dts.

--- a/arch/arm64/boot/dts/F+S/efusmx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/efusmx8mp.dts
@@ -270,3 +270,13 @@
 &bdinfo {
 	board_name = "efusmx8mp";
 };
+
+#ifdef DISPLAY_LVDS_J070WVTC0211
+&backlight_ldb {
+	pwms = <&pwm3 0 250000 PWM_POLARITY_INVERTED>;
+	brightness-levels = <135 143 151 159 167 175 183 191
+			     199 207 215 223 231 239 247 255>;
+	default-brightness-level = <14>;
+};
+#endif
+
