Improve picocoremx8mp mcore support
Add DTS nodes for remote-proc functionality.
Also add SUPPORT_RPMSG define to disable the memory reservation if rpmsg
is not used. Otherwise the kernel will get a kernel panic when booting.

--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -75,13 +75,63 @@
 			 */
 			//no-uboot-override;
 		};
+#ifdef SUPPORT_RPMSG
+
+		reserved-memory {
+			#address-cells = <2>;
+			#size-cells = <2>;
+			ranges;
+/* Running the m-core from the ddr is not supportet yet */
+#if 0
+			m4_reserved: m4@0x80000000 {
+				no-map;
+				reg = <0 0x80000000 0 0x1000000>;
+			};
+#endif
+			vdev0vring0: vdev0vring0@55000000 {
+				reg = <0 0x55000000 0 0x8000>;
+				no-map;
+			};
+
+			vdev0vring1: vdev0vring1@55008000 {
+				reg = <0 0x55008000 0 0x8000>;
+				no-map;
+			};
+
+			vdevbuffer: vdevbuffer@55400000 {
+				compatible = "shared-dma-pool";
+				reg = <0 0x55400000 0 0x100000>;
+				no-map;
+			};
+
+			rsc_table: rsc_table@550ff000 {
+				reg = <0 0x550ff000 0 0x1000>;
+				no-map;
+			};
+		};
+#endif
 
 		/* remove this node because the region used
 		 * only by tuning tool
 		 * */
 		/delete-node/isp0@94400000;
 	};
-
+#ifdef SUPPORT_M7
+	imx8mp-cm7 {
+		compatible = "fsl,imx8mn-cm7";
+		clocks = <&clk IMX8MP_CLK_M7_DIV>;
+#ifdef SUPPORT_RPMSG
+		rsc-da = <0x55000000>;
+		mbox-names = "tx", "rx", "rxdb";
+		mboxes = <&mu 0 1
+			  &mu 1 1
+			  &mu 3 1>;
+		memory-region = <&vdevbuffer>, <&vdev0vring0>, <&vdev0vring1>, <&rsc_table>;
+#endif
+		status = "okay";
+		fsl,startup-delay-ms = <500>;
+	};
+#endif
 #ifdef CONFIG_PICOCOREMX8MP_BL_CTRL
 	backlight_ldb: backlight_ldb {
 		compatible = "pwm-backlight";
