--- a/arch/arm64/boot/dts/F+S/picocoremx8mpr2.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mpr2.dts
@@ -13,6 +13,7 @@
 /* Set baseboard revision as 3-digit number, e.g. 110 for board rev. 1.10 */
 #define CONFIG_PICOCOREBBDSI_BOARD_REVISION	140
 //#define SUPPORT_M7
+//#define SUPPORT_RPMSG
 
 /* HDMI */
 //#define CONFIG_PICOCOREMX8MP_HDMI
@@ -156,6 +157,8 @@
 #undef CONFIG_PICOCOREMX8MP_CAN_A
 #undef CONFIG_PICOCOREMX8MP_I2C_A
 #undef CONFIG_PICOCOREMX8MP_SPI_B
+#else
+#undef SUPPORT_RPMSG
 #endif
 
 #include "picocoremx8mp.dtsi"
