Remove second cooling device
Cooling device includes two cells, one for CPU0, and one for CPU1. Since
CPU1 is disabled we do not need the second cell and can overwrite it.

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -120,6 +120,18 @@
 
 	};
 
+	thermal-zones {
+		core-cluster {
+			cooling-maps {
+				map0 {
+					cooling-device =
+						<&cpu0 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
+				};
+			};
+		};
+	};
+};
+
 &cpu1 {
 	status = "disabled";
 };
