fs-gal1.dts: Enable all SWP interfaces
In UBoot the Ethernet and SWP interfaces can now be deactivated based on
the board type and configuration.

In the Linux-Devicetree thereby a consistent configuration for the
network interfaces can be defined for all boards.

--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -328,7 +328,7 @@
 	managed = "in-band-status";
 	phy-handle = <&qsgmii_phy2>;
 	phy-mode = "qsgmii";
-	status = "disabled";
+	status = "okay";
 };
 
 &mscc_felix_port3 {
@@ -336,7 +336,7 @@
 	managed = "in-band-status";
 	phy-handle = <&qsgmii_phy3>;
 	phy-mode = "qsgmii";
-	status = "disabled";
+	status = "okay";
 };
 
 &mscc_felix_port4{
