--- a/arch/arm64/boot/dts/F+S/fsimx8ulp.dts
+++ b/arch/arm64/boot/dts/F+S/fsimx8ulp.dts
@@ -234,14 +234,15 @@
 
 &iomuxc1 {
 
-	//pinctrl-names = "default";
-	//pinctrl-0 = <&pinctrl_hoggrp>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hoggrp>;
 
-	//pinctrl_hoggrp: hoggrp {
-	//	fsl,pins = <
-	//		MX8ULP_PAD_PTE23__PTE23	0x3
-	//	>;
-	//};
+	pinctrl_hoggrp: hoggpp {
+		fsl,pins = <
+//			MX8ULP_PAD_PTE23__PTE23	0x3
+//			MX8ULP_PAD_PTE19__PTE19 0x3
+		>;
+	};
 
 	pinctrl_lpuart5: lpuart5grp {
 		fsl,pins = <
