Improve imx8mm device trees
Update imx8mm device trees to the 5.15 kernel version.

Use the common display dtsi for our default displays

imx8mm-lcdif-tc358775-j070wvtc0211.dtsi:
The panel clock frequency needed to be reduced in order to work. Maybe
some base clocks were changed?

Change the device tree names of the tc35864 to tc38775 because the old
version is not used anymore

--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-tc358775-j070wvtc0211.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-tc358775-j070wvtc0211.dts
@@ -19,8 +19,9 @@
 #define IMX8MM_TOUCH_RESET_GPIO_NUM 13
 
 #define IMX8MM_TOUCH_I2C i2c2
+#define IMX8MM_LVDS_I2C i2c4
 #define IMX8MM_BACKLIGHT_PWM pwm2
 
-#include "picocoremx8mmr2-lpddr4.dts"
-#include "displays/imx8mm-lcdif-tc358764-j070wvtc0211.dtsi"
+#include "picocoremx8mm-lpddr4.dts"
+#include "displays/imx8mm-lcdif-tc358775-j070wvtc0211.dtsi"
 
