--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l-lcdif-tc358775-j070wvtc0211.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l-lcdif-tc358775-j070wvtc0211.dts
@@ -7,133 +7,42 @@
  */
 
 #define CONFIG_PICOCOREMX8MX_MIPI_DSI_LVDS
-#define CONFIG_PICOCOREMX8MX_INVERTED_XY
+#define CONFIG_IMX8MM_INVERTED_XY
+
+#define IMX8MM_LVDS_RESET_GPIO_BANK		gpio1
+#define IMX8MM_LVDS_RESET_GPIO_NUM		8
+#define IMX8MM_LVDS_STBY_GPIO_BANK		gpio1
+#define IMX8MM_LVDS_STBY_GPIO_NUM		4
+
+#define IMX8MM_TOUCH_INTERRUPT_GPIO_BANK	gpio5
+#define IMX8MM_TOUCH_INTERRUPT_GPIO_NUM		2
+
+#define IMX8MM_TOUCH_RESET_GPIO_BANK gpio1
+#define IMX8MM_TOUCH_RESET_GPIO_NUM 13
+
+#define IMX8MM_TOUCH_I2C i2c2
+#define IMX8MM_LVDS_I2C i2c1
+#define IMX8MM_BACKLIGHT_PWM pwm2
+
 #include "picocoremx8mm-ddr3l.dts"
+#include "displays/imx8mm-lcdif-tc358775-j070wvtc0211.dtsi"
 
-&lcdif {
-	status = "okay";
-	/* important to overwrite max-res otherwise DRM lcdif will fail
-	 * to find a suitable connector
-	 */
-	max-res = <4096>, <4096>;
-};
-
-&mipi_dsi {
-	status = "okay";
-
-	bus-fmt = <0x100a>;
-
-	port@1 {
-		reg = <1>;
-		dsim_to_lvds: endpoint {
-			remote-endpoint = <&lvds_from_dsim>;
-			data-lanes = <0 1 2 3>;
-			attach-bridge;
-		};
-	};
-};
-
-&i2c1 {
-	tc358775@f {
-
-		compatible = "toshiba,tc358775";
-		reg = <0x0f>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_mipi_dsi_lvds_en>;
-		vdd-supply = <&reg_vref_1v8>;
-		vddio-supply = <&reg_vref_3v3>;
-
-		stby-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
-		reset-gpios = <&gpio1 8 GPIO_ACTIVE_LOW>;
-
-		ports {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			port@0 {
-				reg = <0>;
-
-				lvds_from_dsim: endpoint {
-					remote-endpoint = <&dsim_to_lvds>;
-				};
-			};
-
-			port@1 {
-				reg = <1>;
-
-				lvds_to_panel: endpoint {
-					remote-endpoint = <&panel_from_lvds>;
-				};
-			};
-		};
-	};
-};
-
-/{
-	panel: panel {
-		compatible = "panel-lvds";
-		backlight = <&backlight_ldb>;
-		power-supply = <&reg_vlcd>;
-
-		data-mapping = "vesa-24";
-		width-mm = <154>;
-		height-mm = <86>;
-
-		panel-timing {
-				clock-frequency = <33600000>;
-				hactive = <800>;
-				vactive = <480>;
-				hback-porch = <42>;
-				hfront-porch = <210>;
-				hsync-len = <4>;
-				vback-porch = <22>;
-				vfront-porch = <22>;
-				vsync-len = <1>;
-				pixelclk-active = <0>;
-		};
-
-		port@0 {
-			panel_from_lvds: endpoint {
-				remote-endpoint = <&lvds_to_panel>;
-			};
-		};
-	};
-
-	backlight_ldb: backlight_ldb {
-		pwms = <&pwm2 0 250000 PWM_POLARITY_INVERTED>;
-		brightness-levels = <135 143 151 159 167 175 183 191
-				     199 207 215 223 231 239 247 255>;
-		default-brightness-level = <14>;
-	};
-};
-
-&i2c2 {
-	/* touch I2C */
-	focaltech@38 {
-		compatible = "focaltech,fts";
-		reg = <0x38>;
+&touch {
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_touch>;
-		interrupt-parent = <&gpio5>;
-		interrupts = <2 IRQ_TYPE_EDGE_FALLING>;
-		focaltech,irq-gpio = <&gpio5 2 IRQ_TYPE_EDGE_FALLING>;
-#ifdef CONFIG_PICOCOREMX8MX_INVERTED_XY
-		focaltech,touchscreen-inverted-x;
-		focaltech,touchscreen-inverted-y;
-#endif
-
-#if CONFIG_PICOCOREBBDSI_BOARD_REVISION > 120
-		focaltech,reset-gpio = <&gpio1 13 GPIO_ACTIVE_LOW>;
-#endif
-		focaltech,num-max-touches = <10>;
-		focaltech,display-coords = <0 0 800 480>;
-	};
 };
 
 &iomuxc {
+	imx8mm-picocoremx8mx {
 		pinctrl_touch: touch_grp {
 			fsl,pins = <
 				MX8MM_IOMUXC_GPIO1_IO13_GPIO1_IO13	0x00104
 			>;
 		};
+	};
 };
+
+
+
+
+
