--- a/arch/arm64/boot/dts/F+S/picocoremx8mm.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm.dtsi
@@ -58,11 +58,6 @@
 			 */
 			//no-uboot-override;
 		};
-
-		rpmsg_reserved: rpmsg@0xb8000000 {
-			no-map;
-			reg = <0 0xb8000000 0 0x400000>;
-		};
 	};
 
 #ifdef CONFIG_PICOCOREMX8MM_BL_CTRL
@@ -301,10 +296,15 @@
 	pmic@4b {
 		compatible = "rohm,bd71847";
 		reg = <0x4b>;
+		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_pmic>;
 		interrupt-parent = <&gpio5>;
 		interrupts = <2 GPIO_ACTIVE_LOW>;
 		rohm,reset-snvs-powered;
+
+		#clock-cells = <0>;
+		clocks = <&osc_32k 0>;
+		clock-output-names = "clk-32k-out";
 
 		regulators {
 			buck1_reg: BUCK1 {
@@ -314,6 +314,8 @@
 				regulator-boot-on;
 				regulator-always-on;
 				regulator-ramp-delay = <1250>;
+				rohm,dvs-run-voltage = <850000>;
+				rohm,dvs-suspend-voltage = <750000>;
 			};
 
 			buck2_reg: BUCK2 {
@@ -325,6 +327,7 @@
 				regulator-ramp-delay = <1250>;
 				rohm,dvs-run-voltage = <1000000>;
 				rohm,dvs-idle-voltage = <900000>;
+                rohm,dvs-suspend-voltage = <0>;
 			};
 
 			buck3_reg: BUCK3 {
@@ -516,18 +519,6 @@
 };
 #endif
 
-#ifdef SUPPORT_M4
-&rpmsg{
-	/*
-	 * 64K for one rpmsg instance:
-	 * --0xb8000000~0xb800ffff: pingpong
-	 */
-	vdev-nums = <1>;
-	reg = <0x0 0xb8000000 0x0 0x10000>;
-	status = "okay";
-};
-#endif
-
 #ifdef CONFIG_PICOCOREMX8MM_SGTL5000_AUDIO
 &sai5 {
 	#sound-dai-cells = <0>;
@@ -644,7 +635,6 @@
 				 <&clk IMX8MM_SYS_PLL2_250M>;
 	ext_osc = <0>;
 	l1ss-disabled;
-	reserved-region = <&rpmsg_reserved>;
 	status = "okay";
 };
 #endif
@@ -734,6 +724,8 @@
 
 #ifdef CONFIG_PICOCOREMX8MM_SD_A
 &usdhc1 {
+	assigned-clocks = <&clk IMX8MM_CLK_USDHC1>;
+	assigned-clock-rates = <200000000>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc1>, <&pinctrl_usdhc1_gpio>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>, <&pinctrl_usdhc1_gpio>;
@@ -799,6 +791,8 @@
 
 #ifdef CONFIG_PICOCOREMX8MM_EMMC
 &usdhc3 {
+	assigned-clocks = <&clk IMX8MM_CLK_USDHC3>;
+	assigned-clock-rates = <400000000>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc3>;
 	pinctrl-1 = <&pinctrl_usdhc3_100mhz>;
@@ -878,6 +872,17 @@
 };
 
 &A53_0 {
+	cpu-supply = <&buck2_reg>;
+};
+&A53_1 {
+	cpu-supply = <&buck2_reg>;
+};
+
+&A53_2 {
+	cpu-supply = <&buck2_reg>;
+};
+
+&A53_3 {
 	cpu-supply = <&buck2_reg>;
 };
 
