Add optional PCIE_CLKREQ signal for PicoCoreMX8MP(r2)
Some PCIe devices need the CLKREQ signal. This is available on pin 14
on PicoCoreMX8MP and PicoCoreMX8MPr2. Add a pinmux setting for it and
a define to be able to use it. By default it is not in use.

--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dts
@@ -33,8 +33,9 @@
 /* EEPROM - default not mounted */
 #define CONFIG_PICOCOREMX8MP_EEPROM
 
-/* PCIe */
+/* PCIe; CLKREQ is optional and is available on pin 14 */
 #define CONFIG_PICOCOREMX8MP_PCIE
+//#define CONFIG_PICOCOREMX8MP_PCIE_CLKREQ
 
 /* CAN - default not mounted */
 #define CONFIG_PICOCOREMX8MP_CAN_A
@@ -137,6 +138,10 @@
 
 #ifdef CONFIG_PICOCOREMX8MP_SGTL5000_AUDIO
 #define CONFIG_PICOCOREMX8MP_I2S_A
+#endif
+
+#ifdef CONFIG_PICOCOREMX8MP_PCIE_CLKREQ
+#undef CONFIG_PICOCOREMX8MP_UART_A_RTSCTS
 #endif
 
 /*
