--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -1314,6 +1314,10 @@
 			MX8MP_IOMUXC_SAI3_RXD__GPIO4_IO30		0x41
 			/* mPCIE_WAKE */
 			MX8MP_IOMUXC_SAI3_TXD__GPIO5_IO01		0x41
+#ifdef CONFIG_PICOCOREMX8MP_PCIE_CLKREQ
+			/* CLKREQ optionally on pin 14 */
+			MX8MP_IOMUXC_UART4_RXD__PCIE_CLKREQ_B		0x140
+#endif
 		>;
 	};
 #endif
