--- a/arch/arm/configs/fsimx6sx_android_defconfig
+++ b/arch/arm/configs/fsimx6sx_android_defconfig
@@ -2986,7 +2986,7 @@ CONFIG_LEDS_GPIO=y
 # CONFIG_LEDS_LP5562 is not set
 # CONFIG_LEDS_LP8501 is not set
 # CONFIG_LEDS_PCA955X is not set
-CONFIG_LEDS_PCA963X=y
+CONFIG_LEDS_PCA963X_FUS=y
 # CONFIG_LEDS_PCA9685 is not set
 # CONFIG_LEDS_DA9052 is not set
 # CONFIG_LEDS_DAC124S085 is not set
