--- a/arch/arm/configs/fsvybrid_defconfig
+++ b/arch/arm/configs/fsvybrid_defconfig
@@ -393,7 +393,7 @@ CONFIG_MMC_SDHCI_ESDHC_IMX=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
-CONFIG_LEDS_PCA963X=y
+CONFIG_LEDS_PCA963X_FUS=y
 CONFIG_LEDS_PWM=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
