arm64:dts:f+s: Enable power key support for picocoremx8m(m,n) boards
Enable power key support by default in picocoremx8mm.dtsi and
picocoremx8mn-ddr3l.dts.

--- a/arch/arm64/boot/dts/F+S/picocoremx8mm.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm.dtsi
@@ -919,6 +919,10 @@
 #endif
 #endif
 
+&snvs_pwrkey {
+	status = "okay";
+};
+
 &iomuxc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog>;
