Add imx8mp basler isp camera suppoort
Add  support for the basler camera daA3840 wich uses the isp on the SoC.
The Yocto basler layers are needed for the camera to work.
The efusmx8mp currently does not offer the basler connector

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
@@ -195,8 +195,8 @@
 /* Camera on serial MIPI CSI interface */
 #define CONFIG_ARMSTONEMX8MP_CSI_A
 /* Enable Basler da4200 camera */
-#define CONFIG_ARMSTONEMX8MP_CAMERA_BASLER_daA4200
-
+//#define CONFIG_ARMSTONEMX8MP_CAMERA_BASLER_daA4200
+#define CONFIG_ARMSTONEMX8MP_CAMERA_BASLER_daA3840
 /* USB Device TypeC and USB Host 2 Type A*/
 #define CONFIG_ARMSTONEMX8MP_USB_OTG
 #define CONFIG_ARMSTONEMX8MP_USB_HOST
