--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -289,6 +289,7 @@
 		audio-asrc = <&easrc>;
 		audio-routing =
 			"LINE_IN", "Line In Jack",
+			"Mic Jack", "Mic Bias",
 			"MIC_IN", "Mic Jack",
 			"Line Out Jack", "LINE_OUT",
 			"Headphone Jack", "HP_OUT";
