--- a/arch/arm64/boot/dts/F+S/efusmx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/efusmx8mp.dtsi
@@ -62,7 +62,7 @@
 
 / {
 	chosen {
-		stdout-path = &uart2;
+		stdout-path = &uart1;
 	};
 
 	aliases {
@@ -964,6 +964,8 @@
 &uart2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart2>;
+	assigned-clocks = <&clk IMX8MP_CLK_UART2>;
+	assigned-clock-parents = <&clk IMX8MP_SYS_PLL1_80M>;
 #ifdef CONFIG_EFUSMX8MP_UART_C_RTSCTS
 	fsl,uart-has-rtscts;
 #endif
@@ -975,6 +977,8 @@
 &uart3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart3>;
+	assigned-clocks = <&clk IMX8MP_CLK_UART3>;
+	assigned-clock-parents = <&clk IMX8MP_SYS_PLL1_80M>;
 #ifdef CONFIG_EFUSMX8MP_UART_B_RTSCTS
 	fsl,uart-has-rtscts;
 #endif
@@ -986,6 +990,8 @@
 &uart4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4>;
+	assigned-clocks = <&clk IMX8MP_CLK_UART4>;
+	assigned-clock-parents = <&clk IMX8MP_SYS_PLL1_80M>;
 	status = "okay";
 };
 #endif /* CONFIG_EFUSMX8MP_UART_D */
