--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -854,6 +854,8 @@
 &uart1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
+	assigned-clocks = <&clk IMX8MP_CLK_UART1>;
+	assigned-clock-parents = <&clk IMX8MP_SYS_PLL1_80M>;
 	status = "okay";
 };
 #endif /* CONFIG_PICOCOREMX8MP_UART_C */
@@ -873,6 +875,8 @@
 &uart3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart3>;
+	assigned-clocks = <&clk IMX8MP_CLK_UART3>;
+	assigned-clock-parents = <&clk IMX8MP_SYS_PLL1_80M>;
 	status = "okay";
 };
 #endif /* CONFIG_PICOCOREMX8MP_UART_D */
@@ -882,6 +886,8 @@
 &uart4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4>;
+	assigned-clocks = <&clk IMX8MP_CLK_UART4>;
+	assigned-clock-parents = <&clk IMX8MP_SYS_PLL1_80M>;
 #ifdef CONFIG_PICOCOREMX8MP_UART_B_RTSCTS
 	fsl,uart-has-rtscts;
 #endif
