--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -2,7 +2,7 @@ dtb-$(CONFIG_ARCH_MXC) += \
 		fsimx8ulp.dtb \
 		fsimx8ulp_drm.dtb \
 		fsimx8ulp_rgt070qyh_mipi.dtb \
-		fsimx8ulp_drm+cam.dtb \
+		fsimx8ulp_drm_cam.dtb \
 		fsimx8ulp_eth_adp.dtb\
 		fsimx8ulp_epdc.dtb\
 		soldercore8ulp-bbhd.dtb
