Remove unused network-phy-driver in fsgal_defconfig
Remove unused PHY-Drivers for fsgal_defconfig.
This Improves Build-Time and Image-Size.

Additionally the intree "sff,sfp" driver is enabled to test

--- a/arch/arm64/configs/fsgal_defconfig
+++ b/arch/arm64/configs/fsgal_defconfig
@@ -2435,16 +2435,16 @@ CONFIG_PHYLIB=y
 CONFIG_SWPHY=y
 # CONFIG_LED_TRIGGER_PHY is not set
 CONFIG_FIXED_PHY=y
-# CONFIG_SFP is not set
+CONFIG_SFP=y
 
 #
 # MII PHY device drivers
 #
 # CONFIG_AMD_PHY is not set
 # CONFIG_ADIN_PHY is not set
-CONFIG_AQUANTIA_PHY=y
+# CONFIG_AQUANTIA_PHY is not set
 # CONFIG_AX88796B_PHY is not set
-CONFIG_BROADCOM_PHY=m
+# CONFIG_BROADCOM_PHY is not set
 # CONFIG_BCM54140_PHY is not set
 CONFIG_BCM7XXX_PHY=m
 # CONFIG_BCM84881_PHY is not set
@@ -2455,23 +2455,22 @@ CONFIG_BCM_NET_PHYLIB=m
 # CONFIG_DAVICOM_PHY is not set
 # CONFIG_ICPLUS_PHY is not set
 # CONFIG_LXT_PHY is not set
-CONFIG_INPHI_PHY=y
+# CONFIG_INPHI_PHY is not set
 # CONFIG_INTEL_XWAY_PHY is not set
 # CONFIG_LSI_ET1011C_PHY is not set
-CONFIG_MARVELL_PHY=m
-CONFIG_MARVELL_10G_PHY=m
-CONFIG_MICREL_PHY=y
+# CONFIG_MARVELL_PHY is not set
+# CONFIG_MARVELL_10G_PHY is not set
+# CONFIG_MICREL_PHY is not set
 CONFIG_MICROCHIP_PHY=m
 # CONFIG_MICROCHIP_T1_PHY is not set
 CONFIG_MICROSEMI_PHY=y
 # CONFIG_NATIONAL_PHY is not set
-CONFIG_NXP_TJA11XX_PHY=y
-CONFIG_AT803X_PHY=y
-# CONFIG_AT803X_PHY_SMART_EEE is not set
+# CONFIG_NXP_TJA11XX_PHY is not set
+# CONFIG_AT803X_PHY is not set
 # CONFIG_QSEMI_PHY is not set
 CONFIG_REALTEK_PHY=y
 # CONFIG_RENESAS_PHY is not set
-CONFIG_ROCKCHIP_PHY=y
+# CONFIG_ROCKCHIP_PHY is not set
 CONFIG_SMSC_PHY=m
 # CONFIG_STE10XP is not set
 # CONFIG_TERANETICS_PHY is not set
@@ -2480,7 +2479,7 @@ CONFIG_SMSC_PHY=m
 # CONFIG_DP83848_PHY is not set
 # CONFIG_DP83867_PHY is not set
 # CONFIG_DP83869_PHY is not set
-CONFIG_VITESSE_PHY=y
+# CONFIG_VITESSE_PHY is not set
 # CONFIG_XILINX_GMII2RGMII is not set
 # CONFIG_MICREL_KS8995MA is not set
 CONFIG_MDIO_DEVICE=y
@@ -2493,6 +2492,7 @@ CONFIG_MDIO_BCM_UNIMAC=m
 CONFIG_MDIO_CAVIUM=y
 # CONFIG_MDIO_GPIO is not set
 # CONFIG_MDIO_HISI_FEMAC is not set
+CONFIG_MDIO_I2C=y
 # CONFIG_MDIO_MVUSB is not set
 # CONFIG_MDIO_MSCC_MIIM is not set
 # CONFIG_MDIO_OCTEON is not set
